fix tables on mobile WIP continued

--- a/assets/scss/_mixins.scss
+++ b/assets/scss/_mixins.scss
@@ -11,7 +11,7 @@
         border-bottom: 0;
       }
 
-      &__td {
+      &.table__td {
         &--narrow {
           max-width: 100%;
         }
